Implement DailyChallengeRewards contract and integrate reward claiming functionality
- Added DailyChallengeRewards smart contract for managing user rewards.
- Created deployment module for the contract using Hardhat Ignition.
- Integrated reward claiming feature in the Profile page with eligibility checks.
- Updated components to reflect changes in user interface and styling.
- Enhanced TypeScript configuration and added necessary dependencies for contract interaction.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "5.45.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.6.1",
@@ -26,11 +27,30 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.14",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": ">=18.0.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "latest",
-    "typescript": "^5.4.5",
+    "chai": "^4.2.0",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.24.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.8.0",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
+    "typescript": "^5.8.3",
     "vite": "^5.2.11"
   }
 }
