--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@farcaster/frame-sdk": "latest",
     "@farcaster/frame-wagmi-connector": "latest",
+    "@neynar/react": "^1.2.2",
     "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "5.45.1",
